Made working templates which take data from internet

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         </ul>
     </nav>
     <main id="main" class="container">
-
+        
     </main>
-    
+
+    <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="./node_modules/navigo/lib/navigo.min.js"></script>
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./system-config.js"></script>
