Added a working clock at top and cleaned some code

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <div class="row page-header">
             <h1 class="col-xs-12 text-center">Second SPA project</h1>
         </div>
-    </header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <ul class="nav navbar-nav">
-            <li><a href="#/home">Home</a></li>
-            <li><a href="#/products">Products</a></li>
-        </ul>
-    </nav>
+    
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <ul class="nav navbar-nav">
+                <li><a href="#!/home">Home</a></li>
+                <li><a href="#!/products">Products</a></li>
+            </ul>
+            <h3 id="time-container" class="text-center"></h3>
+        </nav>
+    </header>   
     <main id="main" class="container">
         
     </main>
