--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="container-fluid">
         <div class="row page-header">
             <h1 class="col-xs-12 text-center">Second SPA project</h1>
         </div>
-    
+
         <nav class="navbar navbar-default navbar-fixed-top">
             <ul class="nav navbar-nav">
                 <li><a href="#!/home">Home</a></li>
@@ -21,14 +23,18 @@
             </ul>
             <h3 id="time-container" class="text-center"></h3>
         </nav>
-    </header>   
-    <main id="main" class="container">
-        
+    </header>
+    <main>
+        <div id="right-sidebar" class="side-bar"></div>
+        <div id="main" class="container"></div>
     </main>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="./node_modules/navigo/lib/navigo.min.js"></script>
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./system-config.js"></script>
 </body>
+
 </html>
