--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,17 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/3.9.0/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/3.9.0/firebase-auth.js"></script>
+    <script defer src="/__/firebase/3.9.0/firebase-database.js"></script>
+    <script defer src="/__/firebase/3.9.0/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/3.9.0/firebase-storage.js"></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="/__/firebase/init.js"></script>
+
 </head>
 
 <body>
@@ -80,6 +91,21 @@
         </div>
         <!-- /.container -->
     </div>
+
+
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyD7rugoQbslDgdKW_1bXD5tFg57soBVA3E",
+            authDomain: "feilongspa-91a86.firebaseapp.com",
+            databaseURL: "https://feilongspa-91a86.firebaseio.com",
+            projectId: "feilongspa-91a86",
+            storageBucket: "feilongspa-91a86.appspot.com",
+            messagingSenderId: "1075179276760"
+        };
+        firebase.initializeApp(config);
+    </script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
