Added login form (#4), added Table in navbar Moved chart html to handlebars file,

--- a/public/index.html
+++ b/public/index.html
@@ -35,60 +35,30 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-                <a class="navbar-brand" href="#">Team Feilong</a>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Team Feilong</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#!about">Chart</a></li>
-                    <li><a href="#!contact">Sign in</a></li>
+                    <li><a href="#!chart">Chart</a></li>
+                    <li><a href="#!table">Table</a></li>
+                    <li><a href="#!login">Sign in</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
-    <div class="jumbotron">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8" id="chart-container">
-                    <h1>Here is the chart</h1>
-                </div>
-                <div class="col-md-3" id="side-bar">
-                    <h1>Here is the sidebar</h1>
-                </div>
-                <div class="col-md-1" id="side-menu">
-                    <div id="sidebar-wrapper">
-                        <ul class="sidebar-nav">
-                            <li id="favorites" class="active">
-                                <span class="glyphicon glyphicon-star"></span>
-                            </li>
-                            <li id="search">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </li>
-                            <li id="top-ten">
-                                <span class="glyphicon glyphicon-menu-up"></span>
-                            </li>
-                            <li id="bottom-ten">
-                                <span class="glyphicon glyphicon-menu-down"></span>
-                            </li>
-                            <li id="news">
-                                <span class="glyphicon glyphicon-list-alt"></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div id="main">
+
         <!-- /.container -->
     </div>
 
