Existing user login implemented (#4), toastr added

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./node_modules/toastr/build/toastr.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -81,10 +82,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" defer async></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="./node_modules/navigo/lib/navigo.min.js"></script>
     <script src="./node_modules/systemjs/dist/system.js"></script>
+    <script src="./node_modules/toastr/build/toastr.min.js" defer async></script>
     <script src="./system-config.js"></script>
 </body>
 
