Sign out implemented (#4) Toggle sign in/out buttons done; Toastr messages added for various info;

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,8 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#!chart">Chart</a></li>
                     <li><a href="#!table">Table</a></li>
-                    <li><a href="#!login">Sign in</a></li>
+                    <li><a id="login" href="#!auth">Sign in</a></li>
+                    <li><a id="logout" href="#!logout">Sign out</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
