Login/Register animated popup

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#!chart">Chart</a></li>
                     <li><a href="#!table">Table</a></li>
                     <li><a id="login" href="#!auth">Sign in</a></li>
-                    <li><a id="logout" href="#!logout">Sign out</a></li>
+                    <li><a id="logout" href="#!logout" class="hidden">Sign out</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -63,6 +63,7 @@
 
         <!-- /.container -->
     </div>
+    <div id="popup"></div>
 
 
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
