Refactored template compilation, reintroduced list of currencies

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#!chart">Chart</a></li>
                     <li><a href="#!table">Table</a></li>
+                    <li><a href="#!list">List</a></li>
                     <li><a id="login" href="#!auth">Sign in</a></li>
                     <li><a id="logout" href="#!logout" class="hidden">Sign out</a></li>
                 </ul>
