User page template created (#10)

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="register" href="#!create" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a id="user" href="#!user" class="hidden" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span></a></li>
                     <li><a id="login" href="#!auth" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-log-in"></span> Sign in</a></li>
                     <li><a id="logout" href="#!logout" class="hidden" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-log-out"></span> Sign out</a></li>
                 </ul>
