--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,18 @@
         </div>
     </nav>
     <div id="main">
+        <div class="jumbotron">
+            <div class="container-fluid">
+                <div class="col-md-8" id="contents">
+                    <h1>Here is the chart</h1>
+                </div>
+                <div class="col-md-3" id="side-bar">
+                    <h1>Here is the sidebar</h1>
+                </div>
+                <div class="class-xs-12 col-md-1" id="side-menu">
+                </div>
+            </div>
+        </div>
 
         <!-- /.container -->
     </div>
