--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./node_modules/d3/build/d3.min.js"></script>
+    <script src="./node_modules/techan/dist/techan.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" defer async></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
@@ -108,6 +110,9 @@
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./node_modules/toastr/build/toastr.min.js" defer async></script>
     <script src="./system-config.js"></script>
+
+    
+
 </body>
 
 </html>
