--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,9 @@
                     <li class="active"><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in">Home</a></li>
                     <li><a href="#!chart" data-toggle="collapse" data-target=".navbar-collapse.in">Chart</a></li>
                     <li><a href="#!table" data-toggle="collapse" data-target=".navbar-collapse.in">Table</a></li>
-                    <li><a href="#!list" data-toggle="collapse" data-target=".navbar-collapse.in">List</a></li>
+
+                    <!--Moved in the sidebar-->
+                    <!--<li><a href="#!list" data-toggle="collapse" data-target=".navbar-collapse.in">List</a></li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="register" href="#!create" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -71,7 +73,7 @@
                     <h1>Here is the chart</h1>
                 </div>
                 <div class="col-md-3" id="side-bar">
-                    <h1>Here is the sidebar</h1>
+                    <!--<h1>Here is the sidebar</h1>-->
                 </div>
                 <div class="class-xs-12 col-md-1" id="side-menu">
                 </div>
@@ -101,8 +103,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./node_modules/d3/build/d3.min.js"></script>
-    <script src="./node_modules/techan/dist/techan.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" defer async></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
@@ -110,9 +110,6 @@
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./node_modules/toastr/build/toastr.min.js" defer async></script>
     <script src="./system-config.js"></script>
-
-    
-
 </body>
 
 </html>
