FScore alg try 3.0

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,9 @@
                     <li class="active"><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in">Home</a></li>
                     <li><a href="#!chart" data-toggle="collapse" data-target=".navbar-collapse.in">Chart</a></li>
                     <li><a href="#!table" data-toggle="collapse" data-target=".navbar-collapse.in">Table</a></li>
-                    <li><a href="#!list" data-toggle="collapse" data-target=".navbar-collapse.in">List</a></li>
+
+                    <!--Moved in the sidebar-->
+                    <!--<li><a href="#!list" data-toggle="collapse" data-target=".navbar-collapse.in">List</a></li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="register" href="#!create" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -111,7 +113,7 @@
     <script src="./node_modules/toastr/build/toastr.min.js" defer async></script>
     <script src="./system-config.js"></script>
 
-    
+
 
 </body>
 
