Bugfix - add missing Class. Everything works now

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                     <h1>Here is the chart</h1>
                 </div>
                 <div class="col-md-3" id="side-bar">
-                    <h1>Here is the sidebar</h1>
+                    <!--<h1>Here is the sidebar</h1>-->
                 </div>
                 <div class="class-xs-12 col-md-1" id="side-menu">
                 </div>
