Minor tweaks on favorites, Searche moved to side

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,8 @@
                     <h1>Here is the chart</h1>
                 </div>
                 <div class="col-md-3" id="side-bar">
+                    <div id="side-bar-top"></div>
+                    <div id="side-bar-bottom"></div>
                     <!--<h1>Here is the sidebar</h1>-->
                 </div>
                 <div class="class-xs-12 col-md-1" id="side-menu">
