--- a/public/index.html
+++ b/public/index.html
@@ -11,27 +11,15 @@
 
     <title>Stock analysis</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./node_modules/toastr/build/toastr.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="./css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/3.9.0/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/3.9.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/3.9.0/firebase-database.js"></script>
-    <script defer src="/__/firebase/3.9.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/3.9.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
 
 </head>
 
@@ -86,36 +74,18 @@
     </div>
     <div id="popup"></div>
 
-
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyD7rugoQbslDgdKW_1bXD5tFg57soBVA3E",
-            authDomain: "feilongspa-91a86.firebaseapp.com",
-            databaseURL: "https://feilongspa-91a86.firebaseio.com",
-            projectId: "feilongspa-91a86",
-            storageBucket: "feilongspa-91a86.appspot.com",
-            messagingSenderId: "1075179276760"
-        };
-        firebase.initializeApp(config);
-    </script>
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
+    <!-- Bootstrap core JavaScript ============= -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
     <script src="./node_modules/d3/build/d3.min.js"></script>
     <script src="./node_modules/techan/dist/techan.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" defer async></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="./node_modules/navigo/lib/navigo.min.js"></script>
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./node_modules/toastr/build/toastr.min.js" defer async></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" defer async></script>
     <script src="./system-config.js"></script>
-
-
 
 </body>
 
