--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./node_modules/toastr/build/toastr.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/typeahead.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
