--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,14 @@
                     <!--<li><a href="#!list" data-toggle="collapse" data-target=".navbar-collapse.in">List</a></li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="register" href="#!create" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a id="user" href="#!user" class="hidden" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span></a></li>
+
+                    <li><a id="user" href="#!user" class="hidden" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span>User</a></li>
+                    <li class="dropdown"><a id="account" href="#" class="hidden dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
+                        <ul id="account-menu" class="dropdown-menu"></ul>
+                    </li>
                     <li><a id="login" href="#!auth" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-log-in"></span> Sign in</a></li>
                     <li><a id="logout" href="#!logout" class="hidden" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-log-out"></span> Sign out</a></li>
+                    <li><a id="register" href="#!create" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
